src/snapshots/new_nu_parser__test__node_output@match.nu.snap
---
source: src/test.rs
expression: evaluate_example(path)
input_file: tests/match.nu
---
==== COMPILER ====
0: Variable (4 to 5) "x"
1: Int (8 to 9) "1"
2: PipeElement { expr: NodeId(1), redirection: None } (8 to 9)
3: Let { variable_name: NodeId(0), ty: None, initializer: NodeId(2), is_mutable: false } (0 to 9)
4: Variable (15 to 18) "foo"
5: Variable (27 to 29) "$x"
6: Int (34 to 35) "1"
7: String (39 to 44) ""one""
8: Int (48 to 49) "2"
9: Variable (63 to 64) "w"
10: Int (67 to 68) "3"
11: PipeElement { expr: NodeId(10), redirection: None } (67 to 68)
12: Let { variable_name: NodeId(9), ty: None, initializer: NodeId(11), is_mutable: false } (59 to 68)
13: Int (73 to 74) "2"
14: Plus (75 to 76)
15: Variable (77 to 79) "$w"
16: BinaryOp { lhs: NodeId(13), op: NodeId(14), rhs: NodeId(15) } (73 to 79)
17: Block(BlockId(0)) (59 to 82) - sub_nodes: 12,16
18: Closure { params: None, block: NodeId(17) } (53 to 83)
19: Int (87 to 88) "3"
20: Null (92 to 96)
21: String (100 to 101) "_"
22: Garbage (106 to 107)
23: Match(MatchId(0)) (21 to 110) - sub_nodes: target: 5, arms: 6: 7,8: 18,19: 20,21: 22
24: PipeElement { expr: NodeId(23), redirection: None } (21 to 110)
25: Let { variable_name: NodeId(4), ty: None, initializer: NodeId(24), is_mutable: false } (11 to 110)
26: Block(BlockId(1)) (0 to 111) - sub_nodes: 3,25
==== COMPILER ERRORS ====
Error (NodeId 22): use null instead of ()
