src/snapshots/new_nu_parser__test__node_output@record.nu.snap
---
source: src/test.rs
expression: evaluate_example(path)
input_file: tests/record.nu
---
==== COMPILER ====
0: Name (1 to 2) "a"
1: Int (4 to 5) "1"
2: Name (7 to 8) "b"
3: Int (10 to 11) "2"
4: Record(RecordId(0)) (0 to 12)
5: Block(BlockId(0)) (0 to 13)
==== SCOPE ====
0: Frame Scope, node_id: NodeId(5) (empty)
==== TYPES ====
0: unknown
1: int
2: unknown
3: int
4: record<a: int, b: int>
5: record<a: int, b: int>
==== IR ====
register_count: 5
file_count: 0
0: LoadLiteral { dst: RegId(0), lit: Record { capacity: 2 } }
1: LoadLiteral { dst: RegId(1), lit: String(DataSlice { start: 0, len: 1 }) }
2: LoadLiteral { dst: RegId(2), lit: Int(1) }
3: RecordInsert { src_dst: RegId(0), key: RegId(1), val: RegId(2) }
4: LoadLiteral { dst: RegId(3), lit: String(DataSlice { start: 1, len: 1 }) }
5: LoadLiteral { dst: RegId(4), lit: Int(2) }
6: RecordInsert { src_dst: RegId(0), key: RegId(3), val: RegId(4) }
7: Return { src: RegId(0) }

