src/snapshots/new_nu_parser__test__node_output@record3.nu.snap
---
source: src/test.rs
expression: evaluate_example(path)
input_file: tests/record3.nu
---
==== COMPILER ====
0: Name (2 to 3) "a"
1: Int (5 to 6) "1"
2: Name (9 to 10) "b"
3: Int (12 to 13) "2"
4: Record(RecordId(0)) (0 to 16)
5: Block(BlockId(0)) (0 to 17)
==== SCOPE ====
0: Frame Scope, node_id: NodeId(5) (empty)
==== TYPES ====
0: unknown
1: int
2: unknown
3: int
4: record<a: int, b: int>
5: record<a: int, b: int>
==== IR ====
register_count: 0
file_count: 0
==== IR ERRORS ====
Error (NodeId 4): node Record(RecordId(0)) not suported yet

