src/snapshots/new_nu_parser__test__node_output@reparse.nu.snap
---
source: src/test.rs
expression: evaluate_example(path)
input_file: tests/reparse.nu
---
==== COMPILER ====
0: Variable (4 to 5) "x"
1: Name (10 to 11) "a"
2: PosParam { name: NodeId(1), ty: None, custom_completion: None, default: None, is_optional: false } (10 to 11)
3: Params(ParamsId(0)) (9 to 12) - sub_nodes: 2
4: Variable (13 to 15) "$a"
5: Block(BlockId(0)) (13 to 16) - sub_nodes: 4
6: Closure { params: Some(NodeId(3)), block: NodeId(5) } (8 to 17)
7: PipeElement { expr: NodeId(6), redirection: None } (8 to 17)
8: Let { variable_name: NodeId(0), ty: None, initializer: NodeId(7), is_mutable: false } (0 to 17)
9: Variable (22 to 23) "y"
10: String (28 to 29) "a"
11: String (31 to 32) "b"
12: Record(RecordId(0)) (26 to 34) - sub_nodes: pairs: 10: 11
13: PipeElement { expr: NodeId(12), redirection: None } (26 to 34)
14: Let { variable_name: NodeId(9), ty: None, initializer: NodeId(13), is_mutable: false } (18 to 34)
15: Block(BlockId(1)) (0 to 34) - sub_nodes: 8,14
==== SCOPE ====
0: Frame Scope, node_id: NodeId(15)
  variables: [ x: NodeId(0), y: NodeId(9) ]
1: Frame Scope, node_id: NodeId(5)
  variables: [ a: NodeId(1) ]
==== TYPES ====
0: closure
1: unknown
2: any
3: forbidden
4: unknown
5: unknown
6: closure
7: closure
8: ()
9: record<a: string>
10: unknown
11: string
12: record<a: string>
13: record<a: string>
14: ()
15: ()
==== IR ====
register_count: 0
file_count: 0
==== IR ERRORS ====
Error (NodeId 8): node Let { variable_name: NodeId(0), ty: None, initializer: NodeId(7), is_mutable: false } not suported yet
