src/snapshots/new_nu_parser__test__node_output@string.nu.snap
---
source: src/test.rs
expression: evaluate_example(path)
input_file: tests/string.nu
---
==== COMPILER ====
0: String (0 to 13) ""hello world""
1: String (14 to 27) "'hello world'"
2: Block(BlockId(0)) (0 to 27)
==== SCOPE ====
0: Frame Scope, node_id: NodeId(2) (empty)
==== TYPES ====
0: string
1: string
2: string
==== IR ====
register_count: 2
file_count: 0
0: LoadLiteral { dst: RegId(0), lit: String(DataSlice { start: 0, len: 11 }) }
1: Drain { src: RegId(0) }
2: LoadLiteral { dst: RegId(1), lit: String(DataSlice { start: 11, len: 11 }) }
3: Return { src: RegId(1) }

